--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,11 @@ go:
 
 go_import_path: github.com/Eun/coredns-ipecho
 
+before_install:
+  - go get -t -v ./...
+
+script:
+  - go test -race -coverprofile=coverage.txt -covermode=atomic
+
 after_success:
 - bash <(curl -s https://codecov.io/bash)
