--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -58,8 +58,9 @@ jobs:
         run: go test -v -count=1 -coverprofile="coverage-${{ matrix.platform }}-${{ steps.go-mod-details.outputs.go_version }}.cov" -covermode=atomic ./...
       -
         name: Send coverage
-        uses: shogo82148/actions-goveralls@v1.6.0
+        uses: coverallsapp/github-action@v1.1.3
         with:
+          github-token: ${{ secrets.github_token }}
           path-to-profile: coverage-${{ matrix.platform }}-${{ steps.go-mod-details.outputs.go_version }}.cov
           flag-name: ${{ matrix.platform }}-${{ steps.go-mod-details.outputs.go_version }}
           parallel: true
@@ -69,6 +70,7 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - uses: shogo82148/actions-goveralls@v1.6.0
+      - uses: coverallsapp/github-action@v1.1.3
         with:
+          github-token: ${{ secrets.github_token }}
           parallel-finished: true
