--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -58,10 +58,10 @@ jobs:
         run: go test -v -count=1 -coverprofile="coverage-${{ matrix.platform }}-${{ steps.go-mod-details.outputs.go_version }}.cov" -covermode=atomic ./...
       -
         name: Send coverage
-        uses: coverallsapp/github-action@1.1.3
+         uses: shogo82148/actions-goveralls@v1.6.0
         with:
           github-token: ${{ secrets.github_token }}
-          path-to-lcov: coverage-${{ matrix.platform }}-${{ steps.go-mod-details.outputs.go_version }}.cov
+          path-to-profile: coverage-${{ matrix.platform }}-${{ steps.go-mod-details.outputs.go_version }}.cov
           flag-name: ${{ matrix.platform }}-${{ steps.go-mod-details.outputs.go_version }}
           parallel: true
 
@@ -70,7 +70,7 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - uses: coverallsapp/github-action@1.1.3
+      - uses: shogo82148/actions-goveralls@v1.6.0
         with:
           github-token: ${{ secrets.github_token }}
           parallel-finished: true
