--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -55,22 +55,4 @@ jobs:
           go-version: ${{ steps.go-mod-details.outputs.go_version }}
       -
         name: Test
-        run: go test -v -count=1 -coverprofile="coverage-${{ matrix.platform }}-${{ steps.go-mod-details.outputs.go_version }}.cov" -covermode=atomic ./...
-      -
-        name: Send coverage
-        uses: shogo82148/actions-goveralls@v1.6.0
-        with:
-          github-token: ${{ secrets.github_token }}
-          path-to-profile: coverage-${{ matrix.platform }}-${{ steps.go-mod-details.outputs.go_version }}.cov
-          flag-name: ${{ matrix.platform }}-${{ steps.go-mod-details.outputs.go_version }}
-          parallel: true
-
-  # notifies that all test jobs are finished.
-  finish:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: shogo82148/actions-goveralls@v1.6.0
-        with:
-          github-token: ${{ secrets.github_token }}
-          parallel-finished: true
+        run: go test -v -count=1 ./...
