--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,10 +12,19 @@ jobs:
       -
         uses: actions/checkout@v3.0.2
       -
+        name: Get go.mod details
+        uses: Eun/go-mod-details@v1.0.4
+        id: go-mod-details
+      -
+        name: Install Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: ${{ steps.go-mod-details.outputs.go_version }}
+      -
         name: lint
         uses: golangci/golangci-lint-action@v3.1.0
         with:
-          version: latest
+          version: v1.42.0
           # optional: show only new issues if it's a pull request. The default value is `false`.
           # only-new-issues: true
 
@@ -27,7 +36,15 @@ jobs:
       -
         uses: actions/checkout@v3.0.2
       -
+        name: Get go.mod details
+        uses: Eun/go-mod-details@v1.0.4
+        id: go-mod-details
+      -
+        name: Install Go
         uses: actions/setup-go@v3
+        with:
+          go-version: ${{ steps.go-mod-details.outputs.go_version }}
+
       # we cannot use nancy-github-action because it is outdated, so it's better to use the latest
       # docker image for the validation
       -
